2006-04-17 Mikhail Khodjaiants
	Added the "AddWatchpoint" action to the breakpoints view.
	* AddWatchpointActionDelegate.java
	* plugin.properties
	* plugin.xml

2006-04-05 Mikhail Khodjaiants
	Bug 135118: Modules view is not updated.
	* ModuleProxyFactory.java
	* ModulesViewEventHandler.java
	* ModulesViewModelProxy.java

2006-04-05 Mikhail Khodjaiants
	Corrected the shared library image selection.
	* CDebugImages.java
	* CDebugModelPresentation.java
	- icons/ovr16/symbols_ovr.gif

2006-04-04 Mikhail Khodjaiants
	See bug 134871: StackOverflowError using AsynchronousViewer.
	* ModulesView.java
	
2006-04-04 Mikhail Khodjaiants
	Complying with Eclipse 3.2 M6. AsynchronousTreeModelViewer has been renamed to AsynchronousTreeViewer.
	* AbstractViewerState.java
	* ModulesViewer.java
	* ModulesViewerState.java

2006-03-29 Mikhail Khodjaiants
	Allow clients to contribute IRestart adapters.
	* RestartActionDelegate.java

2006-03-15 Mikhail Khodjaiants
	An ICDebuggerPage adapter is added to retain compatibility with old extensions.
	+ CDebuggerPageAdapter.java
	* CDebugUIPlugin.java

2006-03-06 Mikhail Khodjaiants
	Fix for Bug 93777: Postmortem and Local launch need a default preference for selected debugger.
	* ICDebugHelpContextIds.java
	+ DebuggerTypesPage.java
	* PreferenceMessages.properties
	* plugin.properties
	* plugin.xml

2006-02-27 Mikhail Khodjaiants
	Discouraged access to EditorsPlugin. 
	Added support for SharedTextColors to CDebugUIPlugin.
	+ SharedTextColors.java
	* DisassemblyView.java
	* CDebugUIPlugin.java

2006-02-27 Mikhail Khodjaiants
	Bug 89429: replaced the usage of the internal SourceLookupUIUtils class by DebugUITools.
	* AddSourceContainerDialog.java
	* EditContainerAction.java
	* SourceContainerLabelProvider.java

2006-02-27 Mikhail Khodjaiants
	Added dependency to the org.eclipse.ui.views plugin (needed to use the breakpoint 
	actions in the Outline view).
	* MANIFEST.MF

2006-02-27 Mikhail Khodjaiants