@@ -1,3 +1,7 @@
+2006-05-12 Mikhail Khodjaiants
+	Bug 109449: Sort globals in "Add Globals" dialog.
+	* AddGlobalsActionDelegate.java
+
 2006-04-17 Mikhail Khodjaiants
 	Added the "AddWatchpoint" action to the breakpoints view.
 	* AddWatchpointActionDelegate.java
